# mizcore

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  create_environements.sh  exec_test.sh  setup.py
include/emcore/: parser.hpp
mizar/src/: CMakeLists.txt  ast_node.hpp  ast_tree.hpp  miz_file_handler.cpp  miz_file_handler.hpp  miz_flex_lexer.cpp  miz_flex_lexer.hpp  symbol.hpp  symbol_table.cpp  symbol_table.hpp  token.cpp  token.hpp  token_array.cpp  token_array.hpp  token_factory.cpp  token_factory.hpp  token_type.hpp  vct_file_handler.cpp  vct_file_handler.hpp  vct_flex_lexer.hpp  vct_scanner.l  yy_miz_flex_lexer.l  yy_vct_flex_lexer.l
mizar/tests/: CMakeLists.txt  miz_file_handler_test.cpp  symbol_table_test.cpp  vct_file_handler_test.cpp
mizar/tests/results/: numerals_tokens_expected.txt
py_binding/: CMakeLists.txt  py_ast_block.hpp  py_ast_component.hpp  py_ast_element.hpp  py_ast_statement.hpp  py_ast_token.hpp  py_comment_token.hpp  py_identifier_token.hpp  py_keyword_token.hpp  py_miz_controller.cpp  py_numeral_token.hpp  py_symbol_token.hpp  py_unknown_token.hpp
src/: CMakeLists.txt
src/component/: CMakeLists.txt  ast_block.cpp  ast_block.hpp  ast_component.cpp  ast_component.hpp  ast_element.cpp  ast_element.hpp  ast_node.hpp  ast_statement.cpp  ast_statement.hpp  ast_token.cpp  ast_token.hpp  ast_tree.hpp  ast_type.cpp  ast_type.hpp  error_def.cpp  error_def.hpp  error_object.cpp  error_object.hpp  error_table.cpp  error_table.hpp  pattern_element.cpp  pattern_element.hpp  pattern_table.cpp  pattern_table.hpp  symbol.cpp  symbol.hpp  symbol_table.cpp  symbol_table.hpp  symbol_type.hpp  token.cpp  token.hpp  token_array.cpp  token_array.hpp  token_table.cpp  token_table.hpp  token_type.cpp  token_type.hpp
src/mizar/: CMakeLists.txt  ast_node.hpp  ast_tree.hpp  miz_file_handler.cpp  miz_file_handler.hpp  miz_flex_lexer.cpp  miz_flex_lexer.hpp  symbol.hpp  symbol_table.cpp  symbol_table.hpp  token.cpp  token.hpp  token_array.cpp  token_array.hpp  token_type.hpp  vct_file_handler.cpp  vct_file_handler.hpp  vct_flex_lexer.hpp  yy_miz_flex_lexer.l
src/parser/: CMakeLists.txt  SymbolTrie.cpp  SymbolTrie.hpp  miz_block_parser.cpp  miz_block_parser.hpp  miz_pattern_parser.cpp  miz_pattern_parser.hpp
src/parser/data/: mml.trie  mml.vct
src/scanner/: CMakeLists.txt  miz_file_handler.cpp  miz_file_handler.hpp  miz_flex_lexer.cpp  miz_flex_lexer.hpp  miz_lexer_handler.cpp  miz_lexer_handler.hpp  vct_file_handler.cpp  vct_file_handler.hpp  vct_flex_lexer.hpp  vct_lexer_handler.cpp  vct_lexer_handler.hpp  yy_miz_flex_lexer.l  yy_vct_flex_lexer.l
src/util/: CMakeLists.txt  all_in_one.cpp  all_in_one.hpp  config.cpp  config.hpp  miz_controller.cpp  miz_controller.hpp
test/parser/: CMakeLists.txt  SymbolTrieTest.cpp
tests/: CMakeLists.txt
tests/mizar/: CMakeLists.txt  miz_file_handler_test.cpp  symbol_table_test.cpp  vct_file_handler_test.cpp
tests/mizar/data/: mml.vct
tests/mizar/results/: numerals_tokens_expected.txt
tests/parser/: CMakeLists.txt  miz_block_parser_test.cpp  miz_pattern_parser_test.cpp
tests/parser/data/: abcmiz_0.miz  altcat_1.miz  aofa_a00.miz  axioms_mod_ng.miz  jgraph_4.miz  tarski_0.miz
tests/parser/expected/: abcmiz_0_blocks.json  abcmiz_0_pattern_table.json  abcmiz_1_abs_blocks.json  abcmiz_1_abs_tokens.json  altcat_1_pattern_table.json  aofa_a00_pattern_table.json  axioms_mod_ng_blocks.json  axioms_mod_ng_tokens.json  jgraph_4_blocks.json  jgraph_4_pattern_table.json  numerals_tokens.json  tarski_0_blocks.json  tarski_0_tokens.json
tests/scanner/: CMakeLists.txt  miz_file_handler_test.cpp  miz_lexer_handler_test.cpp  symbol_table_test.cpp  vct_file_handler_test.cpp  vct_lexer_handler_test.cpp
tests/scanner/expected/: numerals_tokens.json  numerals_tokens.txt
tests/scanner/result/: jgraph_4_tokens_diff.json
tests/scanner/results/: numerals_tokens_expected.txt
tests/util/: CMakeLists.txt  file_handling_tools.cpp  file_handling_tools.hpp  miz_controller_test.cpp
tests/util/data/: numerals.miz
tests/util/expected/: numerals_blocks.json
tools/: init_environments.sh
x86_64-apple-darwin/: Dockerfile  build.sh  x86_64-apple-darwin.cmake
x86_64-w64-mingw/: Dockerfile  build.sh  x86_64-w64-mingw.cmake
